package patterns.behavioral.chainOfResponsibility;
public class AnkaraSube extends KargoSirketi {

    public AnkaraSube() {
        super(EnumIl.ANKARA);
    }

}
