package patterns.behavioral.chainOfResponsibility;
public class AntalyaSube extends KargoSirketi {

    public AntalyaSube() {
        super(EnumIl.ANTALYA);
    }

}
