package patterns.behavioral.chainOfResponsibility;
public class BalikesirSube extends KargoSirketi {
    public BalikesirSube() {
        super(EnumIl.BALIKESIR);
    }

}
