package patterns.behavioral.chainOfResponsibility;
public class IstanbulSube extends KargoSirketi {

    public IstanbulSube() {
        super(EnumIl.ISTANBUL);
    }

}
